<?xml version="1.0"?>
<package format="2">
  <name>om_slam</name>
  <version>0.0.0</version>
  <description>The open_mower slam package</description>

  <maintainer email="cedbossneo@github.com">Cedric Hauber</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <url type="website">https://github.com/cedbossneo/om-slam</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ldlidar_stl_ros</exec_depend>
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>xbot_msgs</exec_depend>
  <exec_depend>xbot_positioning</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
